# azcam-expstatus

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
azcam_expstatus/: expstatus.pyw  expstatus_ui.py  make_gui.bat
