[project]
name = "azcam-expstatus"
version = "22.3.2"
description = "Azcam extension for displaying exposure progress in a Qt window"
license = {file ="LICENSE"}
readme = "README.md"
keywords=["ccd", "imaging", "astronomy", "sensors"]
authors = [{name="Michael Lesser"},{email = "mlesser@arizona.edu"}]
dependencies = [
    "azcam",
    "PySide2",
]

[project.urls]
Documentation = "https://mplesser.github.io/azcam/"
Repository = "https://github.com/mplesser/azcam-expstatus/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_expstatus"