[project]
name = "azcam-expstatus"
version = "24.1"
description = "An Azcam application which displays exposure progress in a GUI window"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["ccd", "imaging", "astronomy", "sensors"]
authors = [{ name = "Michael Lesser" }, { email = "mlesser@arizona.edu" }]
dependencies = ["azcam", "azcam_console", "PySide6"]

[project.urls]
Documentation = "https://azcam.readthedocs.io/"
Repository = "https://github.com/mplesser/azcam-expstatus/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_expstatus"

[project.scripts]
azcamobserve = "azcam_console.observe.__main__:main"
