[project]
name = "azcam-expstatus"
version = "24.2"
description = "An Azcam application which displays exposure progress in a GUI window"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["ccd", "imaging", "astronomy", "sensors"]
authors = [{ name = "Michael Lesser" }, { email = "mlesser@arizona.edu" }]
dependencies = ["azcam", "PySide6"]

[project.urls]
Documentation = "https://azcam.readthedocs.io/"
Repository = "https://github.com/mplesser/azcam-expstatus/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
